--- a/src/partials/team-modal-window.html
+++ b/src/partials/team-modal-window.html
@@ -1,16 +1,16 @@
 <div class="footerModal is-hidden" data-modal-team>
     <h3 class="footerHeadline">Worked on the project:</h3>
     <button type="button" class="modal__close-btn-team" data-modal-close-team></button>
-    <div class="teamList">
-        <ul class="teamSection1">
-            <li class="teamCard">
-                <img class="cardFront" src="https://avatars.githubusercontent.com/u/97597653?v=4" alt="" width="256"
+    <div class="team-list">
+        <ul class="team-modal-window-row">
+            <li class="person-card">
+                <img class="person-image" src="https://avatars.githubusercontent.com/u/97597653?v=4" alt="" width="256"
                     height="256">
                 <div class="person-info">
                     <p class="teamRoles">Team lead</p>
                     <div class="gitAndName">
                         <a href="https://github.com/PeterYurich" target="_blank" class="city">
-                            <svg class="githab__icon" width="20" height="20">
+                            <svg class="github__icon" width="20" height="20">
                                 <use href="./images/sprite.svg#icon-github">
                                 </use>
                             </svg>
@@ -19,14 +19,14 @@
                     </div>
                 </div>
             </li>
-            <li class="teamCard">
-                <img class="cardFront" src="https://avatars.githubusercontent.com/u/93533516?v=4" alt="" width="256"
+            <li class="person-card">
+                <img class="person-image" src="https://avatars.githubusercontent.com/u/93533516?v=4" alt="" width="256"
                     height="256">
                 <div class="person-info">
                     <p class="teamRoles">Scrum master</p>
                     <div class="gitAndName">
                         <a href="https://github.com/TanichkaIs" target="_blank" class="city">
-                            <svg class="githab__icon" width="20" height="20">
+                            <svg class="github__icon" width="20" height="20">
                                 <use href="./images/sprite.svg#icon-github">
                                 </use>
                             </svg>
@@ -36,15 +36,15 @@
                 </div>
             </li>
         </ul>
-        <ul class="teamSection2">
-            <li class="teamCard">
-                <img class="cardFront" src="https://avatars.githubusercontent.com/u/97792710?v=4" alt="" width="256"
+        <ul class="team-modal-window-row">
+            <li class="person-card">
+                <img class="person-image" src="https://avatars.githubusercontent.com/u/97792710?v=4" alt="" width="256"
                     height="256">
                 <div class="person-info">
                     <p class="teamRoles">Developer</p>
                     <div class="gitAndName">
                         <a href="https://github.com/YevhenProkhorenko" target="_blank" class="city">
-                            <svg class="githab__icon" width="20" height="20">
+                            <svg class="github__icon" width="20" height="20">
                                 <use href="./images/sprite.svg#icon-github">
                                 </use>
                             </svg>
@@ -53,14 +53,14 @@
                     </div>
                 </div>
             </li>
-            <li class="teamCard">
-                <img class="cardFront" src="https://avatars.githubusercontent.com/u/97344472?v=4" alt="" width="256"
+            <li class="person-card">
+                <img class="person-image" src="https://avatars.githubusercontent.com/u/97344472?v=4" alt="" width="256"
                     height="256">
                 <div class="person-info">
                     <p class="teamRoles">Developer</p>
                     <div class="gitAndName">
                         <a href="https://github.com/abeskhlibnova" target="_blank" class="city">
-                            <svg class="githab__icon" width="20" height="20">
+                            <svg class="github__icon" width="20" height="20">
                                 <use href="./images/sprite.svg#icon-github">
                                 </use>
                             </svg>
@@ -69,14 +69,14 @@
                     </div>
                 </div>
             </li>
-            <li class="teamCard">
-                <img class="cardFront" src="https://avatars.githubusercontent.com/u/97482927?v=4" alt="" width="256"
+            <li class="person-card">
+                <img class="person-image" src="https://avatars.githubusercontent.com/u/97482927?v=4" alt="" width="256"
                     height="256">
                 <div class="person-info">
                     <p class="teamRoles">Developer</p>
                     <div class="gitAndName">
                         <a href="https://github.com/myrsem" target="_blank" class="city">
-                            <svg class="githab__icon" width="20" height="20">
+                            <svg class="github__icon" width="20" height="20">
                                 <use href="./images/sprite.svg#icon-github">
                                 </use>
                             </svg>
@@ -86,15 +86,15 @@
                 </div>
             </li>
         </ul>
-        <ul class="teamSection3">
-            <li class="teamCard">
-                <img class="cardFront" src="https://avatars.githubusercontent.com/u/99369016?v=4" alt="" width="256"
+        <ul class="team-modal-window-row">
+            <li class="person-card">
+                <img class="person-image" src="https://avatars.githubusercontent.com/u/99369016?v=4" alt="" width="256"
                     height="256">
                 <div class="person-info">
                     <p class="teamRoles">Developer</p>
                     <div class="gitAndName">
                         <a href="https://github.com/MickKorogod" target="_blank" class="city">
-                            <svg class="githab__icon" width="20" height="20">
+                            <svg class="github__icon" width="20" height="20">
                                 <use href="./images/sprite.svg#icon-github">
                                 </use>
                             </svg>
@@ -103,15 +103,15 @@
                     </div>
                 </div>
             </li>
-            <li class="teamCard">
-                <img class="cardFront"
+            <li class="person-card">
+                <img class="person-image"
                     src="https://avatars.githubusercontent.com/u/97561552?s=400&u=95d42ab96a1fd812b523d15edba99c985cd13104&v=4"
                     alt="" width="256" height="256">
                 <div class="person-info">
                     <p class="teamRoles">Developer</p>
                     <div class="gitAndName">
                         <a href="https://github.com/Golembovskaya" target="_blank" class="city">
-                            <svg class="githab__icon" width="20" height="20">
+                            <svg class="github__icon" width="20" height="20">
                                 <use href="./images/sprite.svg#icon-github">
                                 </use>
                             </svg>
@@ -120,14 +120,14 @@
                     </div>
                 </div>
             </li>
-            <li class="teamCard">
-                <img class="cardFront" src="https://avatars.githubusercontent.com/u/96379129?v=4" alt="" width="256"
+            <li class="person-card">
+                <img class="person-image" src="https://avatars.githubusercontent.com/u/96379129?v=4" alt="" width="256"
                     height="256">
                 <div class="person-info">
                     <p class="teamRoles">Developer</p>
                     <div class="gitAndName">
                         <a href="https://github.com/NataliiaKolomiichenko" target="_blank" class="city">
-                            <svg class="githab__icon" width="20" height="20">
+                            <svg class="github__icon" width="20" height="20">
                                 <use href="./images/sprite.svg#icon-github">
                                 </use>
                             </svg>
