--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -11,7 +11,7 @@
 @import './components/film-modal-window';
 @import './components/one-card';
 @import './components/loader';
-@import './components/modal-footer';
+// @import './components/modal-footer';
 @import './components/custom-pagination';
 
 @import './layout/film-grid';
