--- a/src/sass/components/_movie-card.scss
+++ b/src/sass/components/_movie-card.scss
@@ -1,18 +1,32 @@
+.movie-card {
+  max-width: 280px;
+
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover {
+    transform: scale(1.03);
+    cursor: pointer;
+  }
+}
+
 .img-wrapper {
   border-radius: 5px;
+  overflow: hidden;
+  margin-bottom: 8px;
+}
+
+.movie-card-img {
+  object-fit: cover;
 }
 
 .card-info {
   @include font(500, 12, 14);
   color: var(--accent-color);
 }
+
 .card-info__title {
   color: var(--primary-color);
   margin-bottom: 5px;
-}
-
-.card-info__genre {
-  color: var(--accent-color);
 }
 
 .release-date {
@@ -33,36 +47,20 @@
   color: var(--accent-text-color);
 }
 
-.movie-card {
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  max-width: 280px;
-}
-
-.movie-card:hover {
-  transform: scale(1.03);
-  cursor: pointer;
-}
-
-.img-wrapper {
-  margin-bottom: 8px;
-  height: 355px;
-}
-
-.photo-card-img {
-  object-fit: cover;
-}
-
 // mob responsive
 
 @media screen and (max-width: 319px) {
   .movie-card {
-    // width: 100%;
+    width: 100%;
+  }
+
+  .img-wrapper {
+    height: 120vw;
   }
 }
 
 // mob adaptive
 @media screen and (max-width: 767px) {
-
   .card-info {
     @include font(500, 12, 14);
   }
@@ -73,16 +71,19 @@
   .movie-card {
     max-width: 336px;
   }
+
+  .img-wrapper {
+    height: 495px;
+  }
+
   .card-info {
     @include font(500, 12, 16);
   }
+
   .film-rating {
     line-height: 1.2;
   }
 
-  .img-wrapper {
-    height: 455px;
-  }
 }
 
 // desktop
@@ -93,18 +94,18 @@
   }
 
   .img-wrapper {
-    margin-bottom: 12px;
     height: 574px;
+    margin-bottom: 12px;
   }
 
-  .card-info {
-    @include font(500, 20, 24);
-  }
+    .card-info {
+      @include font(500, 20, 24);
+    }
 
-  .film-rating {
-    width: 40px;
-    height: 20px;
-    @include font(500, 12, 22);
-    line-height: 1.6;
-  }
+    .film-rating {
+      width: 40px;
+      height: 20px;
+      @include font(500, 12, 22);
+      line-height: 1.6;
+    }
 }
