--- a/src/sass/layout/_film-grid.scss
+++ b/src/sass/layout/_film-grid.scss
@@ -1,9 +1,8 @@
 .film-grid {
+  padding: 20px;
+  padding-bottom: 40px;
   display: grid;
   justify-content: center;
-  padding-top: 20px;
-  padding-bottom: 40px;
-  grid-template-columns: auto;
   gap: 20px;
 }
 
@@ -18,6 +17,6 @@
 @media screen and (min-width: 1280px) {
   .film-grid {
     grid-template-columns: auto auto auto;
-    gap: 32px 16px;
+    gap: 32px 20px;
   }
 }
