fixed center grid

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -11,10 +11,8 @@
 @import './components/loader';
 @import './components/team-modal-window';
 @import './components/custom-pagination';
+@import './components/film-grid';
 
-@import './layout/film-grid';
 @import './layout/header';
 @import './layout/footer';
 @import './layout/my_lib_header';
-
-
