--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -1,7 +1,3 @@
-.container-main {
-    display: contents;
-}
-
 // mob responsive
 .container {
     width: 100%;
@@ -13,6 +9,8 @@
 @media screen and (min-width: 320px) {
     .container {
         width: 320px;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
 
