--- a/src/sass/components/_film-grid.scss
+++ b/src/sass/components/_film-grid.scss
@@ -1,5 +1,5 @@
 .film-grid {
-  padding: 20px;
+  padding-top: 20px;
   padding-bottom: 40px;
   display: grid;
   justify-content: center;
@@ -20,3 +20,4 @@
     gap: 32px 20px;
   }
 }
+
