--- a/src/sass/components/_team-modal-window.scss
+++ b/src/sass/components/_team-modal-window.scss
@@ -4,7 +4,7 @@
     bottom: 0;
     left: 0;
 
-    display: flex;
+    //display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: center;
@@ -21,17 +21,17 @@
 
 .team-list {
     overflow: visible;
-    width: 90%;
+    //width: 90%;
 
     display: block;
 }
 
 .footerHeadline {
-    display: inline;
+    //display: inline;
     margin: 0;
-    margin-bottom: 20px;
-    margin-top: 10px;
-
+    margin-bottom: 40px;
+    margin-top: 20px;
+    text-align: center;
 
     color: var(--secondary-text-modal-color);
     font-weight: 100;
@@ -56,8 +56,9 @@
 }
 
 .teamRoles {
-    font-size: 20px;
+    font-size: 18px;
     margin-bottom: 10px;
+    flex-direction: row;
 }
 
 .gitAndName {
@@ -108,6 +109,7 @@
 
 .github__icon {
     fill: var(--dark-theme-text-color);
+    margin-left: 10px;
 
     &:hover {
         opacity: 0.5;
@@ -156,6 +158,7 @@
 
 // mob adaptive
 @media screen and (min-width: 320px) {
+ 
     .team-list {
         display: flex;
         flex-direction: column;
@@ -173,6 +176,7 @@
 
     .footerHeadline {
         font-style: var(--modal-tile-style);
+        font-size: 20pt;
     }
 
     .modal__close-btn-team {
@@ -204,8 +208,14 @@
 // desktop
 @media screen and (min-width: 1280px) {
 
+
     .footerHeadline {
         font-size: 40px;
         font-style: var(--modal-tile-style);
+    }
+
+    .person-card {
+        width: 140px;
+        height: 100%;
     }
 }
