--- a/src/sass/components/_custom-pagination.scss
+++ b/src/sass/components/_custom-pagination.scss
@@ -1,20 +1,3 @@
-// main .list {
-//   width: 100%;
-//   max-width: 768px;
-//   background-color: #fff;
-//   border: 1px solid #ccc;
-//   margin-top: 25px;
-// }
-// main .list .item {
-//   padding: 15px;
-//   border-bottom: 1px solid #ccc;
-// }
-// main .list .item:last-of-type {
-//   border-bottom: none;
-// }
-// main .list .item:hover {
-//   background: rgba(0, 0, 0, 0.05);
-// }
 .page-numbers {
   display: flex;
   flex-wrap: wrap;
@@ -23,8 +6,8 @@
   margin-bottom: 40px;
 }
 .page-button {
-  width: 40px;
-  height: 40px;
+  padding: 10px 16px;
+  margin: 2px;
   appearance: none;
   border: none;
   border-radius: 5px;
@@ -50,4 +33,8 @@
 
 .film-list-section {
   padding-bottom: 60px;
+}
+
+.arrow {
+  cursor: pointer;
 }
