--- a/src/partials/my_lib-main.html
+++ b/src/partials/my_lib-main.html
@@ -1,7 +1,7 @@
 <section class="film-list-section">
     <div class="container container-main">
         <div class="message-wrapper">
-        <p class="empty-message">You can add movies to "Watch" of "Queue" from Home page.
+        <p class="empty-message">You can add movies to "Watched" or "Queue" from Home page.
             Now you haven't added any movies.</p>
         </div>
         <div class="film-grid">
